compiler-antlr/src/antlr/src/HrlangParser.js
// Generated from src/Hrlang.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import HrlangListener from './HrlangListener.js';

import { Symbol } from "../../datastructs/symbol.js";
import { Variable } from "../../datastructs/variable.js";
import { SymbolTable } from "../../datastructs/symbolTable.js";
import { SemanticException } from "../../exception/exception.js";
import { Program } from "../../ast/program.js";
import { AbstractCommand } from "../../ast/abstractCommand.js";
import { CommandLeitura } from "../../ast/commandLeitura.js";
import { CommandEscrita } from "../../ast/commandEscrita.js";
import { CommandAtribuicao } from "../../ast/commandAtribuicao.js";
import { CommandDecisao } from "../../ast/commandDecisao.js";




const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class HrlangParser extends antlr4.Parser {

    static grammarFileName = "Hrlang.g4";
    static literalNames = [ null, "'programa'", "'fimprog;'", "'numero'", 
                            "'texto'", "'leia'", "'escreva'", "'se'", "'senao'", 
                            "'('", "')'", "';'", null, "'='", "','", "'{'", 
                            "'}'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, "AP", "FP", "SC", "OP", "ATTR", "VIR", 
                             "ACH", "FCH", "OPREL", "ID", "NUMBER", "WS" ];
    static ruleNames = [ "prog", "decl", "declaravar", "tipo", "bloco", 
                         "cmd", "cmdleitura", "cmdescrita", "cmdattrib", 
                         "cmdselecao", "expr", "termo" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HrlangParser.ruleNames;
        this.literalNames = HrlangParser.literalNames;
        this.symbolicNames = HrlangParser.symbolicNames;

        this._tipo = new Number();
        this._varName = new String();
        this._varValue = new String();
        this.symbolTable = new SymbolTable();
        this.symbol = new Symbol();
        this.program = new Program();
        this.curThread = new Array();
        // this.curThread = new ArrayList<AbstractCommand>();
        this._readID = new String();
        this._writeID = new String();
        // this.cmd;
        this._exprID = new String();
        this.stack = new Array();
        // this.stack = new Stack<ArrayList<AbstractCommand>>();
        this._exprDecision = new String();
        this.listaTrue = new Array();
        this.listaFalse = new Array();
        // this.listaTrue = new ArrayList<AbstractCommand>();
        // this.listaFalse = new ArrayList<AbstractCommand>();

        this.verificaID = function(id){
            if(!this.symbolTable.exists(id)){
              throw new SemanticException("Symbol " + id + " not declared");
            }
          }

        this.exibeComandos = function(){
            for (const cmds of this.program.getComandos()) {
              console.log(cmds);
            }
          }

        this.generateCode = function(){
            this.program.generateTarget();
          }

    }

    get atn() {
        return atn;
    }



	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HrlangParser.RULE_prog);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 24;
	        this.match(HrlangParser.T__0);
	        this.state = 25;
	        this.decl();
	        this.state = 26;
	        this.bloco();
	        this.state = 27;
	        this.match(HrlangParser.T__1);
	         this.program.setVarTable(this.symbolTable);
	                 this.program.setComandos(this.stack.pop());
	               
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decl() {
	    let localctx = new DeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HrlangParser.RULE_decl);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 31; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 30;
	            this.declaravar();
	            this.state = 33; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===HrlangParser.T__2 || _la===HrlangParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaravar() {
	    let localctx = new DeclaravarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HrlangParser.RULE_declaravar);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 35;
	        this.tipo();
	        this.state = 36;
	        this.match(HrlangParser.ID);

	                               this._varName = this._input.LT(-1).text;
	                               this._varValue = null;
	                               this.symbol = new Variable(this._varName, this._tipo, this._varValue);
	                               if(!this.symbolTable.exists(this._varName)){
	                                 this.symbolTable.add(this.symbol);
	                               }else{
	                                 throw new SemanticException("Variable " + this._varName + " already declared");
	                               }
	                             
	        this.state = 43;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===HrlangParser.VIR) {
	            this.state = 38;
	            this.match(HrlangParser.VIR);
	            this.state = 39;
	            this.match(HrlangParser.ID);

	                                   this._varName = this._input.LT(-1).text;
	                                   this._varValue = null;
	                                   this.symbol = new Variable(this._varName, this._tipo, this._varValue);
	                                   if(!this.symbolTable.exists(this._varName)){
	                                     this.symbolTable.add(this.symbol);
	                                   }else{
	                                     throw new SemanticException("Variable " + this._varName + " already declared");
	                                   }
	                                 
	            this.state = 45;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 46;
	        this.match(HrlangParser.SC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tipo() {
	    let localctx = new TipoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HrlangParser.RULE_tipo);
	    try {
	        this.state = 52;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case HrlangParser.T__2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 48;
	            this.match(HrlangParser.T__2);
	             this._tipo = Variable.NUMBER; 
	            break;
	        case HrlangParser.T__3:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 50;
	            this.match(HrlangParser.T__3);
	             this._tipo = Variable.TEXT; 
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bloco() {
	    let localctx = new BlocoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HrlangParser.RULE_bloco);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	         this.curThread = new Array();
	                  this.stack.push(this.curThread);
	                
	        this.state = 56; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 55;
	            this.cmd();
	            this.state = 58; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HrlangParser.T__4) | (1 << HrlangParser.T__5) | (1 << HrlangParser.T__6) | (1 << HrlangParser.ID))) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cmd() {
	    let localctx = new CmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HrlangParser.RULE_cmd);
	    try {
	        this.state = 64;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case HrlangParser.T__4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 60;
	            this.cmdleitura();
	            break;
	        case HrlangParser.T__5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 61;
	            this.cmdescrita();
	            break;
	        case HrlangParser.ID:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 62;
	            this.cmdattrib();
	            break;
	        case HrlangParser.T__6:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 63;
	            this.cmdselecao();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cmdleitura() {
	    let localctx = new CmdleituraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HrlangParser.RULE_cmdleitura);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this.match(HrlangParser.T__4);
	        this.state = 67;
	        this.match(HrlangParser.AP);
	        this.state = 68;
	        this.match(HrlangParser.ID);
	         this.verificaID(this._input.LT(-1).text);
	                                 this._readID = this._input.LT(-1).text;
	                               
	        this.state = 70;
	        this.match(HrlangParser.FP);
	        this.state = 71;
	        this.match(HrlangParser.SC);

	                              let vari = new Variable(this.symbolTable.get(this._readID), this._tipo, this.varValue);
	                              let cmd = new CommandLeitura(this._readID, vari);
	                              this.stack[this.stack.length-1].push(cmd);
	                              // this.stack.peek().add(cmd);
	                            
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cmdescrita() {
	    let localctx = new CmdescritaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HrlangParser.RULE_cmdescrita);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.match(HrlangParser.T__5);
	        this.state = 75;
	        this.match(HrlangParser.AP);
	        this.state = 76;
	        this.match(HrlangParser.ID);
	         this.verificaID(this._input.LT(-1).text);
	                                   this._writeID = this._input.LT(-1).text;
	                                 
	        this.state = 78;
	        this.match(HrlangParser.FP);
	        this.state = 79;
	        this.match(HrlangParser.SC);

	                                let cmd = new CommandEscrita(this._writeID);
	                              this.stack[this.stack.length-1].push(cmd);
	                              // this.stack.peek().add(cmd);
	                              
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cmdattrib() {
	    let localctx = new CmdattribContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HrlangParser.RULE_cmdattrib);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(HrlangParser.ID);

	                         this.verificaID(this._input.LT(-1).text);
	                         this._exprID = this._input.LT(-1).text;
	                       
	        this.state = 84;
	        this.match(HrlangParser.ATTR);
	         this._exprContent = ""; 
	        this.state = 86;
	        this.expr();
	        this.state = 87;
	        this.match(HrlangParser.SC);

	                      let cmd = new CommandAtribuicao(this._exprID, this._exprContent);
	                      this.stack[this.stack.length-1].push(cmd);
	                      // this.stack.peek().add(cmd);
	                    
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cmdselecao() {
	    let localctx = new CmdselecaoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HrlangParser.RULE_cmdselecao);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(HrlangParser.T__6);
	        this.state = 91;
	        this.match(HrlangParser.AP);
	        this.state = 92;
	        this.match(HrlangParser.ID);
	         this._exprDecision = this._input.LT(-1).text; 
	        this.state = 94;
	        this.match(HrlangParser.OPREL);
	         this._exprDecision += this._input.LT(-1).text; 
	        this.state = 96;
	        _la = this._input.LA(1);
	        if(!(_la===HrlangParser.ID || _la===HrlangParser.NUMBER)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	         this._exprDecision += this._input.LT(-1).text; 
	        this.state = 98;
	        this.match(HrlangParser.FP);
	        this.state = 99;
	        this.match(HrlangParser.ACH);
	         this.curThread = new Array();
	                            this.stack.push(this.curThread);
	                          
	        this.state = 102; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 101;
	            this.cmd();
	            this.state = 104; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HrlangParser.T__4) | (1 << HrlangParser.T__5) | (1 << HrlangParser.T__6) | (1 << HrlangParser.ID))) !== 0));
	        this.state = 106;
	        this.match(HrlangParser.FCH);

	                            this.listaTrue = this.stack.pop();
	                          
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===HrlangParser.T__7) {
	            this.state = 108;
	            this.match(HrlangParser.T__7);
	            this.state = 109;
	            this.match(HrlangParser.ACH);
	             this.curThread = new Array();
	                                         this.stack.push(this.curThread);
	                                       
	            this.state = 112; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 111;
	                this.cmd();
	                this.state = 114; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << HrlangParser.T__4) | (1 << HrlangParser.T__5) | (1 << HrlangParser.T__6) | (1 << HrlangParser.ID))) !== 0));

	                                         this.listaFalse = this.stack.pop();
	                                         let cmd = new CommandDecisao(this._exprDecision, this.listaTrue, this.listaFalse);
	                                         this.stack[this.stack.length-1].push(cmd);
	                                       
	            this.state = 117;
	            this.match(HrlangParser.FCH);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HrlangParser.RULE_expr);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121;
	        this.termo();
	        this.state = 127;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===HrlangParser.OP) {
	            this.state = 122;
	            this.match(HrlangParser.OP);
	             this._exprContent += this._input.LT(-1).text; 
	            this.state = 124;
	            this.termo();
	            this.state = 129;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	termo() {
	    let localctx = new TermoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HrlangParser.RULE_termo);
	    try {
	        this.state = 134;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case HrlangParser.ID:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 130;
	            this.match(HrlangParser.ID);

	                         this.verificaID(this._input.LT(-1).text);
	                         this._exprContent += this._input.LT(-1).text;
	                       
	            break;
	        case HrlangParser.NUMBER:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 132;
	            this.match(HrlangParser.NUMBER);
	             this._exprContent += this._input.LT(-1).text; 
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

HrlangParser.EOF = antlr4.Token.EOF;
HrlangParser.T__0 = 1;
HrlangParser.T__1 = 2;
HrlangParser.T__2 = 3;
HrlangParser.T__3 = 4;
HrlangParser.T__4 = 5;
HrlangParser.T__5 = 6;
HrlangParser.T__6 = 7;
HrlangParser.T__7 = 8;
HrlangParser.AP = 9;
HrlangParser.FP = 10;
HrlangParser.SC = 11;
HrlangParser.OP = 12;
HrlangParser.ATTR = 13;
HrlangParser.VIR = 14;
HrlangParser.ACH = 15;
HrlangParser.FCH = 16;
HrlangParser.OPREL = 17;
HrlangParser.ID = 18;
HrlangParser.NUMBER = 19;
HrlangParser.WS = 20;

HrlangParser.RULE_prog = 0;
HrlangParser.RULE_decl = 1;
HrlangParser.RULE_declaravar = 2;
HrlangParser.RULE_tipo = 3;
HrlangParser.RULE_bloco = 4;
HrlangParser.RULE_cmd = 5;
HrlangParser.RULE_cmdleitura = 6;
HrlangParser.RULE_cmdescrita = 7;
HrlangParser.RULE_cmdattrib = 8;
HrlangParser.RULE_cmdselecao = 9;
HrlangParser.RULE_expr = 10;
HrlangParser.RULE_termo = 11;

class ProgContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_prog;
    }

	decl() {
	    return this.getTypedRuleContext(DeclContext,0);
	};

	bloco() {
	    return this.getTypedRuleContext(BlocoContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterProg(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitProg(this);
		}
	}


}



class DeclContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_decl;
    }

	declaravar = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeclaravarContext);
	    } else {
	        return this.getTypedRuleContext(DeclaravarContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterDecl(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitDecl(this);
		}
	}


}



class DeclaravarContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_declaravar;
    }

	tipo() {
	    return this.getTypedRuleContext(TipoContext,0);
	};

	ID = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(HrlangParser.ID);
	    } else {
	        return this.getToken(HrlangParser.ID, i);
	    }
	};


	SC() {
	    return this.getToken(HrlangParser.SC, 0);
	};

	VIR = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(HrlangParser.VIR);
	    } else {
	        return this.getToken(HrlangParser.VIR, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterDeclaravar(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitDeclaravar(this);
		}
	}


}



class TipoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_tipo;
    }


	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterTipo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitTipo(this);
		}
	}


}



class BlocoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_bloco;
    }

	cmd = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CmdContext);
	    } else {
	        return this.getTypedRuleContext(CmdContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterBloco(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitBloco(this);
		}
	}


}



class CmdContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_cmd;
    }

	cmdleitura() {
	    return this.getTypedRuleContext(CmdleituraContext,0);
	};

	cmdescrita() {
	    return this.getTypedRuleContext(CmdescritaContext,0);
	};

	cmdattrib() {
	    return this.getTypedRuleContext(CmdattribContext,0);
	};

	cmdselecao() {
	    return this.getTypedRuleContext(CmdselecaoContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterCmd(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitCmd(this);
		}
	}


}



class CmdleituraContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_cmdleitura;
    }

	AP() {
	    return this.getToken(HrlangParser.AP, 0);
	};

	ID() {
	    return this.getToken(HrlangParser.ID, 0);
	};

	FP() {
	    return this.getToken(HrlangParser.FP, 0);
	};

	SC() {
	    return this.getToken(HrlangParser.SC, 0);
	};

	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterCmdleitura(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitCmdleitura(this);
		}
	}


}



class CmdescritaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_cmdescrita;
    }

	AP() {
	    return this.getToken(HrlangParser.AP, 0);
	};

	ID() {
	    return this.getToken(HrlangParser.ID, 0);
	};

	FP() {
	    return this.getToken(HrlangParser.FP, 0);
	};

	SC() {
	    return this.getToken(HrlangParser.SC, 0);
	};

	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterCmdescrita(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.exitCmdescrita(this);
		}
	}


}



class CmdattribContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HrlangParser.RULE_cmdattrib;
    }

	ID() {
	    return this.getToken(HrlangParser.ID, 0);
	};

	ATTR() {
	    return this.getToken(HrlangParser.ATTR, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	SC() {
	    return this.getToken(HrlangParser.SC, 0);
	};

	enterRule(listener) {
	    if(listener instanceof HrlangListener ) {
	        listener.enterCmdattrib(this);
		}
	}
